# SSE_554_P2

./: .gitignore  CMakeLists.txt  README.md  car.hpp  engine.cpp  engine.hpp  factory.hpp  frame.cpp  frame.hpp  operations.cpp  operations.hpp  tire.cpp  tire.hpp  tires.cpp  tires.hpp
test/: CMakeLists.txt  test_main.cpp  test_main.hpp
